Refactoring of Tools

--- a/sdk/template/ci.yml
+++ b/sdk/template/ci.yml
@@ -7,9 +7,11 @@ resources:
       type: github
       name: Azure/azure-sdk-tools
       endpoint: azure
+      ref: refs/heads/MakingToolsOpenSource
     - repository: azure-sdk-build-tools
       type: git
       name: internal/azure-sdk-build-tools
+      ref: refs/heads/MakeEngSysToolsPublic
 
 trigger:
   branches:
